# bili_comment

./: .gitignore  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
app/: app.vue
app/pages/: index.vue  login.vue  templates.vue
app/stores/: auth.ts  comment.ts  search.ts  template.ts
app/types/: bilibili.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/api/: client.rs  comment.rs  error.rs  login.rs  mod.rs  search.rs
src-tauri/src/commands/: auth.rs  comment.rs  mod.rs  search.rs  template.rs
src-tauri/src/models/: mod.rs  types.rs
src-tauri/src/storage/: credential.rs  mod.rs  template.rs
