[package]
name = "bili-comment"
version = "0.1.0"
description = "B站视频搜索与批量评论工具"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "cookies"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 工具库
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
log = "0.4"

# 二维码生成
qrcode = "0.14"
image = "0.25"
base64 = "0.22"

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# 并发
parking_lot = "0.12"
once_cell = "1.20"

# URL 解析
url = "2.5"
